# at_client_sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  code_of_conduct.md  melos.yaml  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  pubdev_checklist.md
.github/workflows/: at_client_sdk.yaml  at_client_sdk_dart_beta.yaml  autobug.yaml  codeql.yml  export-labels.yaml  melos_bootstrap.yaml  refreshcerts.yaml  scorecards.yml  update_python_requirements.yml
at_client/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
at_client/example/: .env  README.md  main.dart  pubspec.yaml
at_client/lib/: at_client.dart
at_client/test/: at_client_impl_test.dart  at_client_util_test.dart  at_exception_test.dart  at_key_validation_test.dart  decryption_service_test.dart  default_response_parser_test.dart  delete_test.dart  docker-compose.yaml  encryption_service_test.dart  encryption_util_test.dart  get_request_test.dart  key_stream_collection_test.dart  local_secondary_test.dart  monitor_test.dart  put_meta_test.dart  (+10 more)
at_client_mobile/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
at_end2end_test/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
at_functional_test/: pubspec.yaml  runLocal.sh
tools/: pyproject.toml  requirements.txt  update_requirements.sh
tools/cicd1/: update_ce2e_images.sh
tools/cicd1x64/: update_ce2e_images.sh
tools/cicd2/: update_ce2e_images.sh
tools/cicd2x64/: update_ce2e_images.sh
tools/osv-scanner/: go.sum
(+331 files in other folders)
